<resources>

    <string name="app_name">Mobile Project</string>
    <string name="songster_Heading">Songster Search</string>
    <string name="songster_artistName">Enter Artist or band Name:</string>
    <string name="songster_enter_artist_hint">Enter Artist or band</string>
    <string name="songster_search_button">Search</string>
    <string name="songster_FavouriteList">Favourite SongList</string>
    <string name="songster_SongList">SongList Results</string>
    <string name="BackButton">Go Back</string>
    <string name="songster">Songster</string>
    <string name="SongId">Song id:</string>
    <string name="ArtistId">Artist Id:</string>
    <string name="ArtistName">Artist Name:</string>
    <string name="SongTitle">Song Title:</string>
    <string name="Songster_Save">Save</string>
    <string name="Songster_Search">Search Song</string>
    <string name="Songster_Search_Artist">Search Artist</string>
    <string name="Songster_Delete">Delete</string>
    <string name="favouriteList">Favourite List</string>
    <string name="Songster_menu_about">About</string>
    <string name="Songster_menu_help">Help</string>
    <string name="Songster_moreInfoAboutSong">Would Like to know more about this Artist?</string>
    <string name="youSelected">you selected</string>
    <string name="confirm">yes</string>
    <string name="decline">No</string>
    <string name="nothingChanged">Nothing changed</string>
    <string name="SongsterSearch_EnterValidName">Must Enter Artist or band Name</string>
    <string name="SongsterSearch_AboutMenuItem">search your favorite Artist Songs to know more about the app click help icon</string>
    <string name="SongsterSearch_HelpMenuItem">Enter Artist or band name that you want to search for Artist Name then Click Search button or view your favourite Artist List</string>
    <string name="agree">OK</string>
    <string name="SongterSearch_AboutApp">Songster app created by Nouran Nouh  V1.0</string>
   <string name="duplicateMessage">this Song is already saved</string>
    <string name="ConfirmationMessageofSave">Your Favourite Song is saved</string>
    <string name="AskingMessageToDelete">Are you sure you want to delete this song?</string>
    <string name="SongDetail_FavouriteListConfirmation_Add">Do you want to save this to your favourite List?</string>
    <string name="ConfirmationMessage_Of_Deletion">has been removed from favourite</string>

    <string name="title_activity_trivia">TriviaActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="t_header_text" translatable="false">Trivia!</string>
    <string name="t_numQ_text">Number of Questions:</string>
    <string name="t_q_type_text">Type of Questions (choose one or both):</string>
    <string name="t_difficulty_text">Difficulty:</string>
    <string name="t_qtype_toast">"%s questions"</string>
    <string name="t_start_button">Start Trivia</string>
    <string name="t_begin_game_btn_text">Begin</string>
    <string name="t_tf_btn_text">T/F</string>
    <string name="t_mc_btn_text">MC</string>
    <string name="t_easy_diff_content_desc">Easy Mode Button: Swaddled Baby</string>
    <string name="t_med_diff_content_desc">Medium Mode Button: Happy Face</string>
    <string name="t_hard_diff_content_desc">Hard Mode Button: Skull and Crossbones</string>
    <string name="title_activity_trivia_quiz" translatable="false">TriviaQuizActivity</string>
    <string name="t_quiz_question_number">"Question %s"</string>

    <!-- Soccer Games API-->
    <string name="soccer_button" translatable="false">Soccer Game News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t_lb_name_text">Please enter your name:</string>
    <string name="t_lb_score_text">Score:</string>
    <string name="t_lb_type_text">Types of Questions:</string>
    <string name="t_lb_totalscore_text">Total Score:</string>
    <string name="t_lb_results_text">Results:</string>
    <string name="logo">KoolKars</string>
    <string name="description">Canada\'s Largest Car Database</string>
    <string name="hint">name of manufacturer</string>
    <string name="go_to_chat" translatable="false">gotochat</string>
    <string name="go">Go</string>
    <string name="title_activity_empty">idk</string>
    <string name="view_your_saved_cars">View Your Saved Cars</string>
    <string name="save_to_database">Save To Database</string>
    <string name="buy">Buy</string>
    <string name="view_details">View Details</string>
    <string name="model_id">Model ID: </string>
    <string name="make_id">Make ID: </string>
    <string name="t_about">About</string>
    <string name="t_landing_help">Enter the number of questions\nChoose the type of questions: Multiple Choice, True/False, or Both.\nChoose the difficulty of the questions.</string>
    <string name="t_quiz_help">Select a question from the list, and choose an answer.\nOnce you have answered all questions, you may submit the quiz.</string>
    <string name="t_lb_help">Input your name and join the leaderboards!\nLong click on any leaderboard entry to show a popup with more information.</string>
    <string name="t_go_to_leaderboards">Highscores</string>
    <string name="t_lb_hs_username">%s. %s</string>
    <string name="open" translatable="false" />
    <string name="close" translatable="false" />
    <string name="help" translatable="false">Enter Name of Manufacturer in Search Field.
                     Press Go to Load All Models from That Manufacturer.
                     Click on Model Id Of Car, Bottom Right, to View Options for Car.
                     Click Save to Add Car To Database.
                     On HomePage, Click On Favourite Cars to see your cars you have Saved
                     Click On Buy to open Auto trader Link for that Model.
                     Click on Details to Google Search that model. </string>
    <string name="about" translatable="false">Architect:
                    Muhammad Ehsan Khan.
                    Version 1.0, Final Stable Release.
                    Project initiated on March 15th 2021.
                    Project Finalized on March 17th 2021.</string>
    <string name="soccer_Landing_Title">Soccer Articles!</string>
    <string name="favourite_Articles_Title">Your Favourited Articles!</string>
    <string name="noPreviousRating">No Previous Rating</string>
    <string name="PreviousRating">Previous Rating</string>
    <string name="dialogBoxTitle">How would you like to rate the app?</string>
    <string name="saveButton">Save</string>
    <string name="openButton">Open</string>
    <string name="openingArticle">Opening Article!</string>
    <string name="openingArticleInBrowser">Opening Article In Browser!</string>
    <string name="savingArticle">Saving Article!</string>
    <string name="goTofavourite">Going to Favourite Articles</string>
    <string name="t_menu_help_text">Help</string>
    <string name="t_submit_dialog">Please answer all of the questions before submitting.</string>
</resources>