<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:supportsRtl="true">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/songster_Heading"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:id="@+id/songsterHeading"


          />
    <ImageView
        android:contentDescription="Song Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/songsterHeading"
        android:src="@drawable/icons_speaker"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/songsterHeading"
        android:ems="20"
        android:layout_marginTop="80dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/songster_enter_artist_hint"
        android:textColor="@color/black"
        android:id="@+id/textinput"
        android:backgroundTint="@color/pink"
        android:drawableStart="@drawable/ic_action_name"
        android:autofillHints=""


        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/songster_search_button"
        android:id="@+id/searchButton"
        android:backgroundTint="@color/pink"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchButton"
        android:id="@+id/favouriteSongListButton"
        android:backgroundTint="@color/pink"
        android:text="@string/songster_FavouriteList"
        android:layout_marginStart="60dp"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/searchButton"
        android:visibility="invisible"
        android:id="@+id/progressSearch"/>


</RelativeLayout>